<?xml version="1.0" encoding="utf-8"?><!-- Adding the same root's ID for view binding as other layout configurations -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background1"
    android:id="@+id/item_list_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical"
    android:isScrollContainer="true">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        tools:ignore="MissingConstraints"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        android:layout_weight="0.5">

        <ImageView
            android:id="@+id/location_pin"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_no_location" />

        <TextView
            android:id="@+id/current_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textSize="18sp"
            android:textColor="@color/city_text_color"
            android:text="@string/current_city"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:layout_weight="3.2"
        android:weightSum="10"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/weather_ic"
            android:layout_width="189dp"
            android:layout_height="177dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_no_weather"/>

        <TextView
            android:id="@+id/weather_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/no_weather"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="2.5"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8">
            <TextView
                android:id="@+id/temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="78sp"
                android:text="0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="160dp"
            android:layout_gravity="center"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6">
                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="14.88dp"
                    android:src="@drawable/wind"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="10dp"/>

                <TextView
                    android:id="@+id/wind"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/initial_speed"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4">

                <ImageView
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:src="@drawable/humidity"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/initial_humidity"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:layout_weight="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/cities"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/item_list"
                android:name="co.mz.draft.android.android.challenge.ItemListFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="LinearLayoutManager"
                android:orientation="horizontal"
                tools:context="co.mz.draft.android.android.challenge.ItemDetailHostActivity"
                tools:listitem="@layout/item_list_content" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>